--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,14 @@
   width: 164px;
   height: 164px;
 }
+.logo {
+  height: 120px;
+  width: 210px;
+}
+nav .sidenav-trigger i {
+  height: 120px;
+  line-height: 120px;
+}
 @media only screen and (max-width: 990px) {
   .img-resp {
     width: 114px;
