--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ nav a {
 }
 .img-gallery img {
   height: 300px;
-  width: 300px;
+  width: 100%;
 }
 @media only screen and (max-width: 990px) {
   .img-resp {
